<resources>
    <string name="app_name">UserApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_first_name">First Name</string>
    <string name="form_password">Password</string>
    <string name="form_confirm_password">Confirm Password</string>
    <string name="form_username">Username</string>
    <string name="form_age">Age</string>
    <string name="form_last_name">Last Name</string>
    <string name="form_submit_button">Submit</string>
    <string name="add_new_user">Add USer</string>
    <string name="User_Screen_Title">Users</string>
    <string name="view_users">View Users</string>
    <string name="user_detail">User Detail</string>
</resources>